--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dark Themed Blog</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+    <title>Bjarne Stroustrup</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -43,8 +46,12 @@
         }
 
         .display-4 {
-            font-family: "Open Sans", sans-serif;
+            font-family: "Montserrat", sans-serif;
             font-weight: 200px;
+        }
+
+        .display-7 {
+            font-weight: 400;
         }
 
         .spinner {
@@ -76,32 +83,50 @@
                 transform: translateY(0);
             }
         }
+
+        .lead {
+            font-size: 1.2em;
+        }
     </style>
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="index.html">Bjarne Stroustrup </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index2.html">Blog</a>
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Bjarne Stroustrup</a>
+            <button style="color: white;" class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="sidebar offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header text-white border-bottom">
+
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <!-- Body -->
+                <div class="offcanvas-body d-flex flex-column p-4 p-lg-0">
+                    <ul class="navbar-nav justify-content-center align-items-center flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="index2.html">Blog</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
         </div>
     </nav>
 
     <div class="container mt-4 mb-5">
         <div class="row">
             <div class="col-md-5 py-3" id="header">
-                <h1 class="display-4">Celebrating the Legacy of Bjarne Stroustrup</h1>
+                <h1 class="display-6">Celebrating the Legacy of Bjarne Stroustrup</h1>
             </div>
         </div>
         <div class="row">
@@ -112,7 +137,7 @@
                     creator of the C++ programming language. Here's a brief overview of
                     his background and contributions:
                 </p>
-                <h4 class="display-6">Background:</h4>
+                <h4 class="display-7">Background:</h4>
                 <p class="lead">
                     <b>Birth and Education:</b>
                     Bjarne Stroustrup was born on December 30, 1950, in Aarhus, Denmark.
@@ -120,7 +145,7 @@
                     from Aarhus University, Denmark, and a Ph.D. in computer science
                     from the University of Cambridge, England.
                 </p>
-                <h4 class="display-6">Contributions:</h4>
+                <h4 class="display-7">Contributions:</h4>
                 <p class="lead">
                     <b>Creator of C++:</b> Stroustrup designed and implemented the C++
                     programming language in the early 1980s while working at Bell Labs.
@@ -143,7 +168,7 @@
                     development, and distributed systems. <br />
                 </p>
 
-                <h4 class="display-6">C++ Blog:</h4>
+                <h4 class="display-7">C++ Blog:</h4>
                 <p class="lead">
                     Bjarne Stroustrup maintains a blog where he shares insights,
                     thoughts, and updates related to C++ and programming languages. This
@@ -179,7 +204,9 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
