--- a/tour.html
+++ b/tour.html
@@ -7,7 +7,10 @@
     <meta name="keywords"
         content="A Tour of C++, C++, Tour, object-oriented programming, design, generic programming, programming" />
     <title>Stroustrup: A Tour of C++ (Third edition)</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="index.css" />
     <style>
         body {
@@ -24,72 +27,84 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="index.html">Bjarne Stroustrup</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="C++.html">C++</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="bs_faq.html">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="bs_faq2.html">Technical FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="publications.html">Publications</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="WG21.html">WG21 Papers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="4th.html">TC++PL</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="tour.html">Tour++</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="programming.html">Programming</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="dne.html">D&E</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="bio.html">Bio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="interviews.html">Interviews</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="videos.html">Videos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="quotes.html">Quotes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="applications.html">Applications</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link"
-                        href="https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md">Guidelines</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="compilers.html">Compilers</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Bjarne Stroustrup</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="sidebar offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header text-white border-bottom">
+
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <!-- Body -->
+                <div class="offcanvas-body d-flex flex-column p-4 p-lg-0">
+                    <ul class="navbar-nav justify-content-center align-items-center flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="C++.html">C++</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="bs_faq.html">FAQ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="bs_faq2.html">Technical FAQ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="publications.html">Publications</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="WG21.html">WG21 Papers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="4th.html">TC++PL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="tour.html">Tour++</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="programming.html">Programming</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="dne.html">D&E</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="bio.html">Bio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="interviews.html">Interviews</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="videos.html">Videos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="quotes.html">Quotes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="applications.html">Applications</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white"
+                                href="https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md">Guidelines</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="compilers.html">Compilers</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
     <link rel="icon" type="image/png" href="favicon-32x32.png" />
     <div class="container my-4">
-        <h1 class>A Tour of C++ (Third edition)</h1>
+        <h1>A Tour of C++ (Third edition)</h1>
         <h4 class="mb-4">
             Addison-Wesley. ISBN-10: 0-13-681648-7. September 2022.
         </h4>
@@ -162,7 +177,9 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
