--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Bjarne Stroustrup</a>
             <button style="color: white;" class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -100,7 +100,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="sidebar offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+            <div class="sidebar offcanvas offcanvas-start bg-transparent" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header text-white border-bottom">
 
@@ -125,7 +125,7 @@
 
     <div class="container mt-4 mb-5">
         <div class="row">
-            <div class="col-md-5 py-3" id="header">
+            <div class="col-md-5 py-1" id="header">
                 <h1 class="display-6">Celebrating the Legacy of Bjarne Stroustrup</h1>
             </div>
         </div>
