--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="sidebar offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+            <div class="sidebar offcanvas offcanvas-start bg-transparent" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header text-white border-bottom">
 
@@ -96,7 +96,7 @@
     <div class="container content-section">
         <center>
             <!-- added this -->
-            <h1 class="text-white">Welcome to Bjarne Stroustrup's homepage!</h1>
+            <h1 class="text-white py-2">Welcome to Bjarne Stroustrup's homepage!</h1>
             <img src="https://ih1.redbubble.net/image.2769488216.3154/raf,360x360,075,t,fafafa:ca443f4786.jpg"
                 class="img-fluid my-4" alt="Bjarne Stroustrup" />
         </center>
@@ -110,7 +110,7 @@
             (so far). I'm a professor of Computer Science in Columbia University in
             New York City.
         </p>
-        <div class="row">
+        <div id="publications" class="row">
             <!-- added this -->
             <div class="col-md-12">
                 <!-- added this -->
@@ -118,44 +118,43 @@
                     <!-- added this -->
                     <div class="card-header bg-dark">Publications</div>
                     <div class="card-body">
-                        <ul>
-                            <li>
-                                <a href="tour3.html" class="text-primary">A Tour of C++ (3rd edition)</a>: a brief (254
-                                pages + index, historical information, etc.)
-                                tour of the C++ Programming language and its standard library
-                                for experienced programmers.
-                            </li>
-                            <li>
-                                <a href="4th.html" class="text-primary">The C++ Programming Language (4th edition)</a>:
-                                an exhaustive description of the C++ Programming language,
-                                its standard library, and fundamental techniques for
-                                experienced programmers.
-                            </li>
-                            <li>
-                                <a href="programming.html" class="text-primary">Programming: Principles and Practice
-                                    using C++ (3rd
-                                    edition)</a>: a programming text book aimed at beginners who want
-                                eventually to become professionals.
-                            </li>
-                            <li>
-                                <a href="dne.html" class="text-primary">The Design and Evolution of C++</a>: a book
-                                presenting the rationale and design criteria for C++
-                                and its evolution up until 1994.
-                            </li>
-                            <li>
-                                <a href="papers.html" class="text-primary">Research and popular papers</a>
-                            </li>
-                            <li>
-                                <a href="WG21.html" class="text-primary">Technical reports and proposals for the ISO C++
-                                    Standard</a>
-                            </li>
-                            <li><a href="videos.html" class="text-primary">Videos</a></li>
-                            <li>
-                                <a href="interviews.html" class="text-primary">Interviews</a>
-                            </li>
-                            <li>
-                                <a href="bio.html" class="text-primary">Biographical material</a>
-                            </li>
+                        <p>
+                            <a href="tour3.html" class="text-primary">A Tour of C++ (3rd edition)</a>: a brief (254
+                            pages + index, historical information, etc.)
+                            tour of the C++ Programming language and its standard library
+                            for experienced programmers.
+                        </p>
+                        <p>
+                            <a href="4th.html" class="text-primary">The C++ Programming Language (4th edition)</a>:
+                            an exhaustive description of the C++ Programming language,
+                            its standard library, and fundamental techniques for
+                            experienced programmers.
+                        </p>
+                        <p>
+                            <a href="programming.html" class="text-primary">Programming: Principles and Practice
+                                using C++ (3rd
+                                edition)</a>: a programming text book aimed at beginners who want
+                            eventually to become professionals.
+                        </p>
+                        <li>
+                            <a href="dne.html" class="text-primary">The Design and Evolution of C++</a>: a book
+                            presenting the rationale and design criteria for C++
+                            and its evolution up until 1994.
+                        </li>
+                        <li>
+                            <a href="papers.html" class="text-primary">Research and popular papers</a>
+                        </li>
+                        <li>
+                            <a href="WG21.html" class="text-primary">Technical reports and proposals for the ISO C++
+                                Standard</a>
+                        </li>
+                        <li><a href="videos.html" class="text-primary">Videos</a></li>
+                        <li>
+                            <a href="interviews.html" class="text-primary">Interviews</a>
+                        </li>
+                        <li>
+                            <a href="bio.html" class="text-primary">Biographical material</a>
+                        </li>
                         </ul>
                     </div>
                 </div>
