--- a/compilers.html
+++ b/compilers.html
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Bjarne Stroustrup</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -58,7 +58,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="sidebar offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+            <div class="sidebar offcanvas offcanvas-start bg-transparent" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header text-white border-bottom">
 
