--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Bjarne Stroustrup</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
