--- a/tour.html
+++ b/tour.html
@@ -6,6 +6,7 @@
     <meta name="description" content="A Tour of C++" />
     <meta name="keywords"
         content="A Tour of C++, C++, Tour, object-oriented programming, design, generic programming, programming" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Added for proper mobile scaling -->
     <title>Stroustrup: A Tour of C++ (Third edition)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -27,7 +28,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Bjarne Stroustrup</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -35,7 +36,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="sidebar offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+            <div class="sidebar offcanvas offcanvas-start bg-transparent" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header text-white border-bottom">
 
@@ -109,10 +110,10 @@
             Addison-Wesley. ISBN-10: 0-13-681648-7. September 2022.
         </h4>
         <div class="row align-items-center pb-4">
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <img class="img-fluid" src="https://www.stroustrup.com/Tour3English-large.jpg" alt="Book Cover" />
             </div>
-            <div class="col-md-8">
+            <div class="col-sm-12 col-md-8">
                 <p class="lead">
                     The "tour" is a quick (254 pages + index, historical information,
                     etc.) tutorial overview of all of standard C++ (language and
@@ -175,6 +176,7 @@
             Constructive comments and reports of errors are always welcome.
         </p>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
